# math-calculator

./: CMakeLists.txt  conanfile.py
consume/: CMakeLists.txt  conanfile.txt  main.cpp
include/: mathlib2.h
src/: conanfile.txt  mathlib2.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
